--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-hello everyone !!![A[D[D[D[D[D[D[D[D[D[D[D> [C[C[C[C[C[C[C[C[C[Bi am good !!!go to Hell !!! okay no problem !!! Lets try !!! 
+<html>
+<body bgcolor='lightblue'>
+<center><h1>Welcome to my site <h1[D[D/h1></center>
+<h3>This is my site !!!</h3>
+</body>
+<html>
