--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<body bgcolor='lightblue'>
-<center><h1>Welcome to my site <h1[D[D/h1></center>
-<h3>This is my site !!!</h3>
+<body bgcolor='blue'>
+<center><h1>Welcome to testing site <h1[D[D/h1></center>
+<h3>Testing is successful !!!</h3>
 </body>
 <html>
