--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
-<body bgcolor='blue'>
-<center><h1>Welcome to testing site <h1[D[D/h1></center>
+<body bgcolor='lightblue'>
+<center><h1>Welcome to my site <h1[D[D/h1></center>
 <h3>Testing is successful !!!</h3>
+<h1> u r good to go </h1>
 </body>
 <html>
