--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body bgcolor='lightblue'>
-<center><h1>Welcome to my site <h1[D[D/h1></center>
+<center><h1>Welcome to testing site <h1[D[D/h1></center>
 <h3>Testing is successful !!!</h3>
-<h1> u r good to go </h1>
+<h1> once testing is completed ...launched in production environment!!! </h1>
 </body>
 <html>
